<?xml version="1.0"?>
<package>
  <name>rbrobout_sim</name>
  <version>1.1.3</version>
  <description>The rbrobout_sim metapackage</description>

  <license>BSD</license>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rbrobout_gazebo</run_depend>
  <run_depend>rbrobout_sim_bringup</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
